compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__expression_constructor_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Person {\n  Person(name: String, age: Int)\n}\npub fn update_person(person: Person) {\n  let constructor = Person\n  constructor(..person)\n}"
---
error: Invalid record constructor
  ┌─ /src/one/two.rakun:7:3
  │
7 │   constructor(..person)
  │   ^^^^^^^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.
