compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__extra_var_inalternative2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case #(1, 2) { #(1, y) | #(x, y) -> 1 }"
---
error: Extra alternative pattern variable
  ┌─ /src/one/two.rakun:1:28
  │
1 │ case #(1, 2) { #(1, y) | #(x, y) -> 1 }
  │                            ^ Has not been previously defined

All alternative patterns must define the same variables as the initial
pattern. This variable `x` has not been previously defined.
