compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__extra_var_inalternative3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = 1 case #(1, 2) { #(1, y) | #(x, y) -> 1 }"
---
----- SOURCE CODE
let x = 1 case #(1, 2) { #(1, y) | #(x, y) -> 1 }

----- ERROR
error: Extra alternative pattern variable
  ┌─ /src/one/two.rakun:1:38
  │
1 │ let x = 1 case #(1, 2) { #(1, y) | #(x, y) -> 1 }
  │                                      ^ Has not been previously defined

All alternative patterns must define the same variables as the initial
pattern. This variable `x` has not been previously defined.
