compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__float_gtf_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 221
expression: 1.0 >. 1
---
----- SOURCE CODE
1.0 >. 1

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:8
  │
1 │ 1.0 >. 1
  │        ^

The >. operator expects arguments of this type:

    Float

But this argument has this type:

    Int

Hint: the > operator can be used with Ints
