compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__function_return_annotation_mismatch_with_pipe.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 307
expression: "pub fn main() -> String {\n            1\n            |> add_two\n         }\n\n         fn add_two(i: Int) -> Int {\n            i + 2\n         }"
---
----- SOURCE CODE
pub fn main() -> String {
            1
            |> add_two
         }

         fn add_two(i: Int) -> Int {
            i + 2
         }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:2:13
  │  
2 │ ╭             1
3 │ │             |> add_two
  │ ╰──────────────────────^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    String

Found type:

    Int
