compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__functions_called_outside_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 321
expression: "const first = list.at([1], 0)"
---
----- SOURCE CODE
const first = list.at([1], 0)

----- ERROR
error: Syntax error
  ┌─ /src/one/two.rakun:1:15
  │
1 │ const first = list.at([1], 0)
  │               ^^^^^^^^ Functions can only be called within other functions
